词典：个人访问令牌设置

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -782,6 +782,74 @@
     "pages settings now has its own dedicated tab!": "Pages 设置现在有其专用选项卡！",
     "check it out here!": "看看这里！",
 
+    "__comments-Personal access tokens": "个人访问令牌",
+    "personal access tokens": "个人访问令牌",
+    "generate new token": "生成新令牌",
+    "revoke all": "全部撤销",
+    "tokens you have generated that can be used to access the": "生成令牌用于访问",
+    "this token has no expiration date": "此令牌未设置有效期",
+    "regenerate": "重新生成",
+    "this token to take advantage of the": "此令牌使用",
+    "new token formats": "新的令牌格式",
+    "personal access tokens function like ordinary oauth access tokens. they can be used instead of a password for git over https, or can be used to": "个人访问令牌的功能类似于普通的 OAuth 访问令牌。它们可以用来代替 HTTPS 上 Git 的密码，或者可以用来",
+    "authenticate to the api over basic authentication": "通过 Basic Authentication 对 API 进行身份验证",
+    "new personal access token": "新的个人访问令牌",
+    "note": "笔记",
+    "what’s this token for?": "这个令牌有什么用？",
+    "expiration": "有效期",
+    "7 days": "7天",
+    "30 days": "30天",
+    "60 days": "60天",
+    "90 days": "90天",
+    "custom...": "自定义...",
+    "no expiration": "无有效期",
+    "the token will never expire!": "此令牌永不过期！",
+    "beep bop! tokens that live forever are scary. expiration dates are highly recommended!": "哔哔！永不过期的令牌是可怕的。强烈建议设置有效期！",
+    "select scopes": "选择作用域",
+    "scopes define the access for personal tokens.": "作用域定义了个人令牌的访问范围。",
+    "read more about oauth scopes.": "了解更多关于 OAuth 作用域的信息。",
+    "full control of private repositories": "完全控制私有仓库",
+    "access commit status": "访问提交状态",
+    "access deployment status": "访问部署状态",
+    "access public repositories": "访问公共仓库",
+    "access repository invitations": "访问仓库邀请",
+    "read and write security events": "读写安全事件",
+    "update github action workflows": "更新 GitHub 操作工作流程",
+    "upload packages to github package registry": "将包上传到 GitHub 包注册",
+    "download packages from github package registry": "从 GitHub 包注册表下载包",
+    "delete packages from github package registry": "从 GitHub 包注册表中删除包",
+    "full control of orgs and teams, read and write org projects": "完全控制组织和团队，读写组织项目",
+    "read and write org and team membership, read and write org projects": "读写组织和团队成员，读写组织项目",
+    "read org and team membership, read org projects": "读取组织和团队成员，读取组织项目",
+    "full control of user public keys": "完全控制用户公钥",
+    "write user public keys": "写入用户公钥",
+    "read user public keys": "读取用户公钥",
+    "full control of repository hooks": "完全控制仓库挂钩",
+    "write repository hooks": "写入仓库挂钩",
+    "read repository hooks": "读取仓库挂钩",
+    "full control of organization hooks": "完全控制组织挂钩",
+    "create gists": "创建 Gist",
+    "access notifications": "访问通知",
+    "update all user data": " 更新所有用户数据",
+    "read all user profile data": "读取所有用户个人资料数据",
+    "access user email addresses (read-only)": "访问用户电子邮件地址（只读）",
+    "follow and unfollow users": "关注和取消关注用户",
+    "delete repositories": "删除仓库",
+    "read and write team discussions": "读写团队讨论",
+    "read team discussions": "读取团队讨论",
+    "full control of enterprises": "完全控制企业",
+    "read and write enterprise billing data": "读写企业计费数据",
+    "read enterprise profile data": "读取企业个人数据",
+    "full control of public user gpg keys": "完全控制公共用户 GPG 密钥",
+    "(developer preview)": "（开发者预览版）",
+    "write public user gpg keys": "写入公共用户 GPG 密钥",
+    "read public user gpg keys": "读取公共用户 GPG 密钥",
+    "generate token": "生成令牌",
+    "make sure to copy your personal access token now. you won’t be able to see it again!": "确保立即复制您的个人访问令牌。你将无法再看到它！",
+    "are you sure you want to delete this token?": "您确定要删除此令牌吗？",
+    "any applications or scripts using this token will no longer be able to access the github api. you cannot undo this action.": "任何使用此令牌的应用程序或脚本将无法再访问 GitHub API。您无法撤消此操作。",
+    "i understand, delete this token": "我明白了，依然删除该令牌。",
+
     "__comments-12": "Create a Repository",
     "create a repository": "创建一个新仓库",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
