更新 注册和登录

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -88,22 +88,45 @@
     "training": "培训",
     "docs": "文档",
 
-    "__comments-5": "Login & Register",
-    "username": "用户名",
-    "email": "电子邮箱",
-    "password": "密码",
-    "sign up for github": "注册 GitHub",
-    "sign in to github": "登录 GitHub",
-    "username or email address": "用户名或邮箱",
-    "forgot password?": "忘记密码？",
-    "new to github?": "初次接触 GitHub？",
-    "create an account": "新建账户",
-    "make sure it's ": "确保",
+    "__comments-5": "Signup & Login",
+    "already have an account? ": "已经有账户吗？",
+    "sign in →": "登录 →",
+    "welcome to github!": "欢迎来到 GitHub!",
+    "let’s begin the adventure": "让我们开始探险吧",
+    "enter your email": "输入您的邮箱地址",
+    "continue": "继续",
+    "email is invalid or already taken": "电子邮件无效或已被占用",
+    "create a password": "创建密码",
+    "password is too short": "密码太短",
+    "password needs a number and lowercase letter": "密码需要有数字和小写字母",
+    "password is strong": "密码很强壮",
+    "make sure it's": "请确保",
     "at least 15 characters": "至少需要15个字符",
     "or": " 或者",
     "at least 8 characters": "至少需要8个字符",
     "including a number": "包括数字",
     "and a lowercase letter": "和小写字母",
+    "password may be compromised": "密码可能被泄露",
+    "password is in a list of passwords commonly used on other websites": "密码在其他网站常用的密码列表中",
+    "enter a username": "输入您的用户名",
+    "username may only contain alphanumeric characters or single hyphens, and cannot begin or end with a hyphen.": "用户名只能包含字母数字字符或单个连字符，并且不能以连字符开头或结尾。",
+    "would you like to receive product updates and announcements via email?": "您是否愿意通过电子邮件接收产品更新和公告？",
+    "type \"y\" for yes or \"n\" for no": "输入 \"y\" 表示愿意，输入 \"n\" 表示不愿意。",
+    "verify your account": "验证您的帐户",
+    "create account": "创建帐户",
+    "by creating an account, you agree to the": "创建帐户即表示您同意",
+    "terms of service": "服务条款",
+    ". for more information about github's privacy practices, see the": "。有关 GitHub 隐私惯例的更多信息，请参阅",
+    "github privacy statement": "GitHub 隐私声明",
+    ". we'll occasionally send you account-related emails.": "。我们偶尔会向您发送与帐户相关的电子邮件。",
+
+    "sign in to github": "登录 GitHub",
+    "username or email address": "用户名或邮箱",
+    "password": "密码",
+    "forgot password?": "忘记密码？",
+    "incorrect username or password.": "用户名或密码不正确。",
+    "new to github?": "初次接触 GitHub？",
+    "create an account": "新建账户",
     "learn more": "了解更多",
     "confirm password to continue": "确认密码以继续",
     "confirm password": "确认密码",
@@ -153,7 +176,6 @@
     "confirm": "确认",
     "remind me later": "稍后提醒我",
     "configured": "已配置",
-    "security keys are hardware devices that can be used as your second factor of authentication.": "安全钥匙是硬件设备，可以作为您的第二认证因素。",
     "no security keys": "未配置安全钥匙",
     "not configured": "未配置",
     "no fallback sms number": "未设置备用手机号码",
@@ -726,7 +748,6 @@
     "old password": "旧密码",
     "new password": "新密码",
     "confirm new password": "确认新密码",
-    "make sure it's": "请确保",
     "update password": "更新密码",
     "i forgot my password": "我忘记了我的密码",
     "two-factor authentication": "双因素身份验证",
