实验性质的 页面元素正则替换
由于正则替换是枚举性质, 故暂设计为使用url过滤 设置对应规则, 以避免开全局载入慢
效果预览 https://github.com/settings/admin

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -15,6 +15,12 @@
       "replacement": "请求拉取"
     }
   ],
+  "rePagePath": ".*(settings/admin|settings/appearance)",
+  "regexp": {
+    "settings/admin":[
+      ["by clicking \"add successor\" below, i acknowledge that i am the owner of the([^@]+@[^\n]+) account, and am authorizing github to transfer content within that account to my github successor,", "通过点击下面的 \"添加继任者\"，我承认我是 $1 账户的所有者，并授权 GitHub 将该账户内的内容转移给我的 GitHub 继任者。"]
+    ]
+  },
 
   "dict": {
     "__comments-1": "date",
