--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -193,7 +193,7 @@
     "new gist": "新建代码片段",
     "new organization": "新建组织",
     "new project": "新建项目",
-    "your profile": "个人资料",
+    "your profile": "我的主页",
     "your repositories": "我的仓库",
     "your organizations": "我的组织",
     "your codespaces": "我的代码空间",
@@ -210,7 +210,7 @@
     "overview": "概况",
     "repositories": "仓库",
     "projects": "项目",
-    "customize your pins": "自定义您的嵌入项目",
+    "customize your pins": "自定义您的置顶项目",
     "contribution settings": "贡献设置",
     "learn how we count contributions": "了解我们如何计算贡献",
     "recent activity": "最近动态",
@@ -830,14 +830,59 @@
     "preferred spoken language": "首选语言",
 
     "change username": "更改用户名",
+    "changing your username can have": "更改用户名可能会有",
+    "unintended side effects": "意外的副作用",
+    "really change your username?": "确定要更改您的用户名？",
+    "we": "我们",
+    "will not": "不会",
+    "will": "会",
+    "set up redirects for your old profile page.": "为您的旧资料页设置重定向",
+    "set up redirects for pages sites.": "为 Pages 站点设置重定向。",
+    "create redirects for your repositories (web and git access).": "为您的仓库设置重定向（ web 和 git 访问）。",
+    "renaming may take a few minutes to complete.": "重命名可能需要几分钟的时间来完成。",
+    "i understand, let’s change my username": "我明白了，依然更改我的用户名",
+    "enter a new username": "输入一个新用户名",
+    "choose a new username": "选择一个新用户名",
+    "change my username": "更改我的用户名",
+    "looking to manage account security settings? you can find them in the": "想管理账户安全设置？您可以找到它们在",
+    "tab.": "选项页。",
     "export account data": "导出帐户数据",
+    "export all repositories and profile metadata for": "导出所有仓库和配置元数据，自",
+    ". exports will be available for 7 days.": "。导出结果将有 7 天有效期。",
     "start export": "开始导出",
+    "recent exports": "近期导出",
+    "new export": "新建导出",
+    "new exports cannot be requested while an export is currently in progress": "当前正在导出中，无法请求新的导出",
+    "resend email with link": "重新发送带有链接的邮件",
+    "download deleted": "导出内容已删除",
+    "job queued to delete file.": "正在排队删除文件的作业。",
+    "we're preparing your export! we'll send you an email when it's finished.": "我们正在为您准备导出！我们完成后会发一封电子邮件。",
     "successor settings": "设置继任者",
-    "add successor": "添加的继任者",
-    "search by username, full name, or email address": "搜索用户名、全名、或邮件地址",
-    "you have not designated a successor": "您还没有指定继承人",
+    "designated below": "下面指定的",
+    ", in the event of my death. i understand that this appointment of a successor does not override legally binding next-of-kin rules or estate laws of any relevant jurisdiction, and does not create a binding will.": "，在我死亡的情况下。我明白，这种指定继任者的做法并不凌驾于具有法律约束力的近亲规则或任何相关司法管辖区的遗产法，也不产生具有约束力的遗嘱。",
+    "learn more about account successors.": "了解更多关于账户继任者的信息。",
+    "add successor": "添加继任者",
+    "search by username, full name, or email address": "搜索用户名、全名、或电子邮箱",
+    "you have not designated a successor.": "您还没有指定继任者。",
     "delete account": "删除账户",
+    "once you delete your account, there is no going back. please be certain.": "您一旦删除了您的账户，将再也无法恢复。请确认！",
     "delete your account": "删除帐户",
+    "are you sure you don’t want to just": "您确定不希望仅仅是",
+    "downgrade your account": "降级您的账户",
+    "to a": "为",
+    "free": "免费",
+    "account? we won’t charge your payment information anymore.": "账户吗？我们不会再收取您的付款信息。",
+    "are you sure you want to do this?": "你确定要这么做吗？",
+    "this is extremely important.": "这是极其重要的。",
+    "we will": "我们将",
+    ", along with all of your forks, wikis, issues, pull requests, and github pages sites.": "以及您所有的复刻、维基、问题、拉取请求和 GitHub Pages 站点。",
+    "you will no longer be billed, and your username will be available to anyone on github.": "您将不再被收取费用，并且您的用户名将被 GitHub 上的任何人使用。",
+    "for more help, read our article \"": "如需更多帮助，请阅读我们的文章\"",
+    "deleting your user account": "删除您的帐户",
+    "your username or email:": "您的用户名或电子邮箱:",
+    "to verify, type": "为了验证，请输入",
+    "below:": "在下面:",
+    "cancel plan and delete this account": "取消计划并删除此帐户",
 
     "theme preferences": "主题偏好",
     "choose how github looks to you. select a single theme, or sync with your system and automatically switch between day and night themes.": "选择 GitHub 在您眼中的样子。选择单一主题，或与您的系统同步并自动在白天和夜晚的主题之间切换。",
@@ -899,6 +944,7 @@
     "view all sessions": "查看所有会话",
 
     "__comments-Emails": "电子邮箱",
+    "email settings": "电子邮箱设置",
     "primary": "主要的",
     "this email will be used for account-related notifications and can also be used for password resets.": "该电子邮箱将用于与账户有关的通知，也可用于密码重置。",
     "not visible in emails": "在电子邮件中不可见",
