再补充一个示例

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -18,7 +18,8 @@
   "rePagePath": ".*(settings/admin|settings/appearance)",
   "regexp": {
     "settings/admin":[
-      ["by clicking \"add successor\" below, i acknowledge that i am the owner of the([^@]+@[^\n]+) account, and am authorizing github to transfer content within that account to my github successor,", "通过点击下面的 \"添加继任者\"，我承认我是 $1 账户的所有者，并授权 GitHub 将该账户内的内容转移给我的 GitHub 继任者。"]
+      ["by clicking \"add successor\" below, i acknowledge that i am the owner of the([^@]+@[^\n]+) account, and am authorizing github to transfer content within that account to my github successor,", "通过点击下面的 \"添加继任者\"，我承认我是 $1 账户的所有者，并授权 GitHub 将该账户内的内容转移给我的 GitHub 继任者。"],
+      ["immediately delete all of your repositories", "立即删除您所有的仓库"]
     ]
   },
 
