--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -816,6 +816,7 @@
 
     "integrations": "集成",
     "installed github apps": "安装 GitHub 应用",
+    "GitHub Apps augment and extend your workflows on GitHub with commercial, open source, and homegrown tools.": "GitHub 应用通过使用商业、开源和自制的工具来增强并扩展您在 GitHub 上的工作流程。",
 
     "is designed to host your personal, organization, or project pages from a github repository.": "旨在从 GitHub 仓库托管您的个人、组织或项目页面。",
     "your site is published at": "您的站点发布在",
