统一 `follow` 为 `关注`

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1493,7 +1493,7 @@
     "select all": "全选",
     "manage notifications": "管理通知",
     "notification settings": "通知设置",
-    "watched repositories": "订阅的仓库",
+    "watched repositories": "关注的仓库",
     "subscriptions": "订阅",
     "watching": "关注",
     "create new filter": "创建新规则",
