添加 your discussions、

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -198,6 +198,7 @@
     "your organizations": "我的组织",
     "your codespaces": "我的代码空间",
     "your projects": "我的项目",
+    "your discussions": "我的讨论",
     "your stars": "我的标星页面",
     "your gists": "我的代码片段",
     "upgrade": "升级",
