“统计”部分翻译。其他。

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -227,6 +227,8 @@
     "show more": "展示更多",
     "working with a team?": "与团队合作？",
     "github is built for collaboration. set up an organization to improve the way your team works together, and get access to more features.": "GitHub 是为协作而创建的。 建立组织以改善团队合作的方式，并获得更多功能。",
+    "recent repositories": "最近访问的仓库",
+    "latest changes": "最新更改",
 
     "__comments-7": "Search",
     "language:": "编程语言:",
@@ -390,7 +392,51 @@
     "no new commits yet. enjoy your day!": "尚无新提交。祝您愉快！",
     "no new commits to fetch. enjoy your day!": "尚无新提交。祝您愉快！",
     "fetch and merge": "获取并合并",
-
+	"edit pins": "编辑图钉",
+	"pin this to your personal profile, visible to everyone": "把这个固定到你的个人资料上，每个人都可以看到",
+	"pulse": "脉动",
+	"active pull request": "个活跃的拉取请求",
+	"active pull requests": "个活跃的拉取请求",
+	"active issue": "个活跃的议题",
+	"active issues": "个活跃的议题",
+	"merged pull requests": "已合并的拉取请求",
+	"open pull requests": "新建拉取请求",
+	"closed issue": "已关闭的议题",
+	"closed issues": "已关闭的议题",
+	"new issues": "新建议题",
+	"want to help out?": "想要帮忙？",
+	"contributions to develop, excluding merge commits and bot accounts": "对开发的贡献，排除了合并提交和机器人账号。",
+	"community standards": "社区准则",
+	"contributing": "贡献",
+	"here’s how this project compares to": "以下是该项目与推荐的社区准则的比较。",
+	"recommended community standards": "推荐的社区准则",
+	"checklist": "确认表",
+	"what is": "什么是",
+	"the community profile": "社区资料",
+	"writing contributing guidelines": "编写贡献指南",
+	"issue templates": "议题模板",
+	"pull request template": "拉取请求模板",
+	"repository admins accept content reports": "仓库管理员接受内容报告",
+	"code frequency": "代码频率",
+	"dependency graph": "依赖图",
+	"no manifest files found": "没有找到清单文件。",
+	"to enable the dependency graph, your repository must define dependencies in": "为启用依赖图，你的仓库必须把依赖定义在", 
+	"one of the supported manifest file types": "支持的清单文件里", 
+	", like": "，如 ", 
+	"dependents": "从属",
+	"we haven’t found any dependents for this repository yet.": "我们还没有找到该仓库的任何从属。",
+	"we’ll keep looking!": "我们将继续寻找！",
+	"these dependencies are defined in": "这些依赖被定义在",
+	"’s manifest files, such as": " 的清单文件里，如 ",
+	"dependencies defined in": "依赖被定义在 ",
+	"repositories that depend on": "这些仓库依赖于",
+	"network": "网络",
+	"network graph": "网络图",
+	"timeline of the most recent commits to this repository and its network ordered by most recently pushed to.": "该仓库最近的提交的时间轴和它的网络顺序，按照推送时间倒序。",
+	"the repository network shows the 100 most recently pushed forks. do you need to see more forks? please": "该仓库网络图显示了最近的 100 个复刻推送。你需要查看更多的复刻？请",
+	"give us feedback": "反馈",
+	"on your usage of this feature.": "你对该功能的使用情况。",
+	"woah, this network is huge! we’re showing only some of this network’s repositories.": "噢，该网络很大！我们只显示了该网络里的一部分仓库。",
 
     "__comments-pull-request": "仓库拉取请求",
     "pull request": "拉取请求",
@@ -684,6 +730,15 @@
     "most issues": "议题最多",
     "fewest issues": "议题最少",
     "search all labels": "搜索所有标签",
+    "development": "开发",
+    "none yet": "还没有",
+    "no milestone": "没有里程碑",
+    "no branches or pull requests": "没有分支或拉取请求",
+    "you’re receiving notifications because you modified the open/close state.": "你会收到通知因为你修改了议题的打开/关闭状态。",
+    "you’re not receiving notifications from this thread.": "你不会收到该议题的通知",
+    "closed this as": "关闭该议题因为",
+    "reopen": "重新打开",
+    "close as not planned": "因为计划外而关闭",
 
     "__comments-10": "Repository settings",
     "most repository settings are hidden for archived repositories. this repository must be unarchived to change them.": "对于存档的仓库，大多数仓库设置都是隐藏的。 必须解除仓库存档才能更改它们。",
