“统计”部分翻译。

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -405,7 +405,11 @@
 	"closed issues": "已关闭的议题",
 	"new issues": "新建议题",
 	"want to help out?": "想要帮忙？",
-	"contributions to develop, excluding merge commits and bot accounts": "对开发的贡献，排除了合并提交和机器人账号。",
+	"contributions to develop, excluding merge commits and bot accounts": "对 develop 的贡献，排除了合并提交和机器人账号。",
+	"contributions to master, excluding merge commits and bot accounts": "对 master 的贡献，排除了合并提交和机器人账号。",
+	"community": "社区",
+	"enable discussions to unlock community insights!": "开启讨论组，解放社区观点。",
+	"discussions is the central space for your community to share announcements, ask questions, and host conversations.": "讨论组是您的社区分享公告、提问和主持对话的中心。",
 	"community standards": "社区准则",
 	"contributing": "贡献",
 	"here’s how this project compares to": "以下是该项目与推荐的社区准则的比较。",
@@ -417,19 +421,31 @@
 	"issue templates": "议题模板",
 	"pull request template": "拉取请求模板",
 	"repository admins accept content reports": "仓库管理员接受内容报告",
+	"traffic": "流量",
+	"we don’t have enough data to show anything useful.": "数据不足，没法显示啥有用的。",
+	"it usually takes about a week to populate this graph.": "通常需要一周的时间来填充这个图表。",
+	"it looks like traffic to your repository is a little light. go spread the word and check back later!": "看起来您的仓库的流量有点少。去传播这个消息，稍后再来查看！",
 	"code frequency": "代码频率",
-	"dependency graph": "依赖图",
+	"dependency graph": "依赖关系图",
 	"no manifest files found": "没有找到清单文件。",
-	"to enable the dependency graph, your repository must define dependencies in": "为启用依赖图，你的仓库必须把依赖定义在", 
+	"to enable the dependency graph, your repository must define dependencies in": "为启用依赖关系图，你的仓库必须把依赖定义在", 
 	"one of the supported manifest file types": "支持的清单文件里", 
 	", like": "，如 ", 
-	"dependents": "从属",
-	"we haven’t found any dependents for this repository yet.": "我们还没有找到该仓库的任何从属。",
+	"dependents": "从属者",
+	"we haven’t found any dependents for this repository yet.": "我们还没有找到该仓库的任何从属者。",
 	"we’ll keep looking!": "我们将继续寻找！",
 	"these dependencies are defined in": "这些依赖被定义在",
 	"’s manifest files, such as": " 的清单文件里，如 ",
 	"dependencies defined in": "依赖被定义在 ",
 	"repositories that depend on": "这些仓库依赖于",
+	"enable the dependency graph": "启用依赖关系图",
+	"track this repository’s dependencies and sub-dependencies": "追踪该仓库的依赖和子依赖。",
+	"the": "该仓库的",
+	"is not enabled for this repository. click on “enable the dependency graph” below to enable it.": "没有启用。单击下面的“启用依赖关系图”来启用它。",
+	"learn more about how we use your data": "了解我们如何使用你的数据",
+	"dependabot": "依赖机器人",
+	"enable dependabot": "启用依赖机器人",
+	"dependabot isn't enabled on forks by default": "该复刻的依赖机器人没人没有启用。",
 	"network": "网络",
 	"network graph": "网络图",
 	"timeline of the most recent commits to this repository and its network ordered by most recently pushed to.": "该仓库最近的提交的时间轴和它的网络顺序，按照推送时间倒序。",
