完善“设置”的翻译。

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -445,7 +445,9 @@
 	"learn more about how we use your data": "了解我们如何使用你的数据",
 	"dependabot": "依赖机器人",
 	"enable dependabot": "启用依赖机器人",
-	"dependabot isn't enabled on forks by default": "该复刻的依赖机器人没人没有启用。",
+	"dependabot isn't enabled on forks by default": "该复刻的依赖机器人没有启用。",
+	"dependabot isn't enabled": "依赖机器人没有启用。",
+	"has no dependencies or is too large to display": "没有依赖或者太大没法显示。",
 	"network": "网络",
 	"network graph": "网络图",
 	"timeline of the most recent commits to this repository and its network ordered by most recently pushed to.": "该仓库最近的提交的时间轴和它的网络顺序，按照推送时间倒序。",
@@ -453,7 +455,37 @@
 	"give us feedback": "反馈",
 	"on your usage of this feature.": "你对该功能的使用情况。",
 	"woah, this network is huge! we’re showing only some of this network’s repositories.": "噢，该网络很大！我们只显示了该网络里的一部分仓库。",
-
+	"no one has forked this repository yet.": "还没有人复刻该仓库。",
+	"forks are a great way to contribute to a repository. after": "复刻是一个为仓库做贡献的很好的方法。在",
+	"forking a repository": "复刻一个仓库",
+	", you can send the original author a": " 后，你可以给原作者发送一个",
+	"general": "常规",
+	"require contributors to sign off on web-based commits": "要求参与者在网页提交时签核",
+	"enabling this setting will require contributors to sign off on commits made through github’s web interface. signing off is a way for contributors to affirm that their commit complies with the repository's terms, commonly the": "启用该设置会要求参与者在通过 github 的网页接口提交时执行签核。签核是为了让参与者确认他们的提交遵从仓库的条款，通常是",
+	"developer certificate of origin (dco)": "原开发者认证（DOC）",
+	"learn more about signing off on commits": "了解更多，关于提交时签核",
+	"wikis host documentation for your repository.": "利用 wikis 为你的仓库管理文档。",
+	"default to pr title for squash merge commits": "默认应用于拉取请求的标题",
+	"this will pre-populate the commit message with the pr title when performing a squash merge.": "这会先把拉取请求的标题放置于提交信息。",
+	"control how and when users are prompted to update their branches if there are new changes available in the base branch.": "当基础分支有新的可用更改时，如何以及何时提醒用户去更新他们的分支。",
+	"always suggest updating pull request branches": "总是建议更新拉取请求分支",
+	"whenever there are new changes available in the base branch, present an “update branch” option in the pull request.": "无论基础分支何时有新的可用更改，都在拉取请求上提示”更新分支“",
+	"pushes":"推送",
+	"limit how many branches and tags can be updated in a single push": "限制单个推送中可以更新多少分支和标签。",
+	"pushes will be rejected if they attempt to update more than this.": "如果他们尝试更新的比这多，推送会被拒绝。",
+	"about this setting, and send us your": "关于该设置，向我们提交你的",
+	"feedback": "反馈",
+	"access": "访问权限",
+	"collaborators": "合作者",
+	"moderation options": "限制选项",
+	"code review limits": "代码审核限制",
+	"code and automation": "代码和自动化",
+	"webhooks": "网络钩子",
+	"code security and analysis": "代码安全和分析",
+	"deploy keys": "部署密钥",
+	"github apps": "GitHub 应用",
+	"email notifications": "邮件通知",
+	
     "__comments-pull-request": "仓库拉取请求",
     "pull request": "拉取请求",
     "compare": "对比",
