feat: 添加有关 `package` 的 3 个翻译

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -348,6 +348,9 @@
     "create a new release": "创建发行版",
     "no packages published": "未发布包",
     "publish your first package": "发布您的第一个包",
+    "get started with github packages": "开始使用 GitHub 包",
+    "safely publish packages, store your packages alongside your code, and share your packages privately with your team.": "安全地发布包，将包与代码一起存储，并与您的团队共享私有包。",
+    "choose a registry": "选择一个包托管服务",
     "edit repository details": "编辑仓库详情",
     "website": "网站",
     "topics": "话题",
