feat: 添加有关 `list` (标星列表) 的 2 个翻译

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -280,6 +280,11 @@
     "achievements": "成就",
 
     "__comments-9": "Repository",
+    
+    "lists": "列表",
+    "create list": "创建一个列表",
+    
+
     "star": "星标",
     "unstar": "已加星标",
 
