feat: 添加有关星标的 3 个翻译

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -284,6 +284,9 @@
     "lists": "列表",
     "create list": "创建一个列表",
     
+    "starred repositories": "标星的仓库",
+    "starred topics": "标星的话题",
+    "see all starred topics": "查看全部标星话题",
 
     "star": "星标",
     "unstar": "已加星标",
