feat: 添加了有关 `project` 的 3 个翻译

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -214,6 +214,9 @@
     "overview": "概况",
     "repositories": "仓库",
     "projects": "项目",
+    "jump right in": "加入",
+    "no open projects": "没有任何打开的项目",
+    "no projects have been opened yet.": "目前没有被打开的项目。",
     "customize your pins": "自定义您的置顶项目",
     "contribution settings": "贡献设置",
     "learn how we count contributions": "了解我们如何计算贡献",
