对一些翻译进行润色
对一些翻译进行润色

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -102,7 +102,7 @@
     "create a password": "创建密码",
     "password is too short": "密码太短",
     "password needs a number and lowercase letter": "密码需要有数字和小写字母",
-    "password is strong": "密码很强壮",
+    "password is strong": "密码很强",
     "make sure it's": "请确保",
     "at least 15 characters": "至少需要15个字符",
     "or": " 或者",
@@ -199,7 +199,7 @@
     "your codespaces": "我的代码空间",
     "your projects": "我的项目",
     "your discussions": "我的讨论",
-    "your stars": "我的标星页面",
+    "your stars": "我的星标仓库",
     "your gists": "我的代码片段",
     "upgrade": "升级",
     "feature preview": "功能预览",
