个人设置翻译增补

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -201,7 +201,9 @@
     "your discussions": "我的讨论",
     "your stars": "我的标星页面",
     "your gists": "我的代码片段",
+    "your sponsors": "我的赞助",
     "upgrade": "升级",
+    "try enterprise": "尝试 Enterprise",
     "feature preview": "功能预览",
     "sign out": "退出",
     "dashboard": "仪表盘",
@@ -851,6 +853,7 @@
     "profile": "个人资料",
     "account": "帐户",
     "appearance": "外观",
+    "accessibility": "辅助功能",
     "account security": "帐户安全",
     "billing & plans": "计费 & 计划",
     "security log": "安全日志",
@@ -876,18 +879,33 @@
     "name": "名字",
     "public email": "公开邮箱",
     "bio": "个人简介",
-    "twitter username": "Twitter 用户名",
+    "pronouns": "人称代词",
+    "don’t specify": "不指定",
+    "social accounts": "社交账号",
+    "link to social profile": "连接到社交信息",
     "company": "公司",
+    "you can @mention your company’s GitHub organization to link it.": "你可以 @mention 提及你公司的 GitHub organization 来连接。",
     "location": "位置",
+    "display current local time": "显示当前当地的时间",
+    "other users will see the time difference from their local time.": "其他用户将看到与他们当地时间的时差。",
+    "All of the fields on this page are optional and can be deleted at any time, and by filling them out, you're giving us consent to share this data wherever your user profile appears. Please see our": "本页上的所有字段都是可选的，可以在任何时候删除，通过填写这些字段，你同意我们在你的用户资料出现的地方分享这些数据。请参阅我们的",
+    "privacy statement": "隐私声明",
+    "to learn more about how we use this information.": "以更了解我们如何使用这些信息",
     "profile picture": "个人头像",
     "update profile": "更新个人资料",
     "profile settings": "个人资料设置",
     "display pro badge": "显示 Pro 徽章",
     "contributions": "贡献",
+    "activity": "活动",
+    "make profile private and hide activity": "隐藏个人资料和活动",
+    "Enabling this will hide your contributions and activity from your GitHub profile and from social features like followers, stars, feeds, leaderboards and releases.": "启用该功能后，你的贡献和活动将从你的GitHub个人资料以及社交功能（如关注者、星标、feed、排行榜和发布）中隐藏。",
+    "Your contribution graph, achievements, and activity overview will show your private contributions without revealing any repository or organization information.": "你的贡献图、成就和活动概览将显示你的私人贡献，而不透露任何储存库或组织信息。",
+    "update preference": "更新偏好",
     "include private contributions on my profile": "在我的个人资料中显示私人共享",
     "github developer program": "GitHub 开发人员计划",
     "trending settings": "趋势设置",
     "preferred spoken language": "首选语言",
+    "no preferences": "无偏好",
 
     "change username": "更改用户名",
     "changing your username can have": "更改用户名可能会有",
@@ -944,6 +962,35 @@
     "below:": "在下面:",
     "cancel plan and delete this account": "取消计划并删除此帐户",
 
+    "keyboard shortcuts": "快捷键",
+    "general": "通用",
+    "character keys": "字母键",
+    "gitHub shortcuts": "GitHub 快捷键",
+    "that don't use modifier keys in their activation.": "时，无需修饰键。",
+    "for example, the": "例如，依次按下",
+    "shortcut to navigate notifications, or": "按键来打开通知，或使用",
+    "to view context relevant shortcuts.": "查看当前可用的相关的快捷键",
+    "learn more about character key shortcuts": "了解更多字母快捷键",
+
+    "command palette": "命令面板",
+    "modify the shortcuts to trigger the Command Palette for the default search mode and the command mode": "修改命令面板中切换默认搜索模式和命令模式的快捷键",
+    "search mode": "搜索模式",
+    "command mode": "命令模式",
+
+    "motion": "动态内容",
+    "autoplay animated images": "自动播放动图",
+    "disabled": "禁用",
+
+    "editor settings": "编辑器设定",
+    "URL paste behavior": "URL 粘贴偏好",
+    "select if URLs should be formatted on paste. You can use": "选择粘贴 URLs 时的格式，你可以使用",
+    "to paste a link in the opposite way.": "快捷键来使用另一种格式。",
+    "formatted link": "链接",
+    "pasting a URL while having text selected will format to a Markdown link": "在选择了文本的情况下，粘贴一个 URL 将被格式化为一个 Markdown 链接",
+    "plain text": "纯文本",
+    "pasting a URL while having text selected will replace the text": "在选择了文本的情况下，粘贴一个 URL 将取代文本。",
+
+
     "theme preferences": "主题偏好",
     "choose how github looks to you. select a single theme, or sync with your system and automatically switch between day and night themes.": "选择 GitHub 在您眼中的样子。选择单一主题，或与您的系统同步并自动在白天和夜晚的主题之间切换。",
     "theme mode": "主题模式",
@@ -962,6 +1009,13 @@
 
     "emoji skin tone preference": "表情符号肤色偏好",
     "preferred default emoji skin tone": "默认的表情符号肤色",
+
+    "tab size preference": "Tab 大小偏好",
+    "choose the number of spaces a tab is equal to when rendering code": "在渲染代码时，选择一个制表符等于多少个空格",
+
+    "markdown editor font preference": "Markdown 编辑器字体偏好",
+    "font preference for plain text editors that support Markdown styling (e.g. pull request and issue descriptions, comments.)": "支持 Markdown 风格的纯文本编辑器的字体偏好（例如，拉取请求和问题描述、评论）。",
+    "Use a fixed-width (monospace) font when editing Markdown": "在编辑 Markdown 时使用固定宽度(monospace)字体",
 
     "__comments-Account Security": "帐户安全",
     "change password": "更改密码",
