--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1824,8 +1824,8 @@
     "solutions": "解决方案",
     "open source": "开源项目",
 
-    "github docs": "github 文档",
-    "github support": "github 帮助",
+    "github docs": "Github 文档",
+    "github support": "Github 帮助",
     "your sponsors":"我的赞助",
     "your enterprises":"我的企业",
     "code, planning, and automation":"代码、规划和自动化",
